# govee-ble-air-purifier

./: AGENTS.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/govee_ble_air_purifier/: __init__.py  client.py  config_flow.py  const.py  controller.py  coordinator.py  diagnostics.py  entity.py  fan.py  manifest.json  models.py  profiles.py  protocol.py  select.py  sensor.py  setup_helpers.py  strings.json  switch.py
custom_components/govee_ble_air_purifier/translations/: en.json
docs/: architecture.md  repository-structure.md
docs/superpowers/plans/: 2026-06-29-setup-discovery-options.md  2026-06-30-automation-safe-responsiveness.md  2026-06-30-cloud-style-fan-entity.md  2026-06-30-fast-command-confirmation.md  2026-06-30-manual-only-setup.md
tests/: test_client.py  test_config_flow_logic.py  test_config_flow_runtime.py  test_controller.py  test_coordinator_logic.py  test_diagnostics.py  test_fan_entity.py  test_hacs_packaging.py  test_init_lifecycle.py  test_protocol.py  test_runtime_smoke.py  test_sensor_entities.py  test_switch_entity.py
